--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -7,13 +7,14 @@
                 ngModel 
                 required
                 minlength="3"
+                placeholder="Post Title"
                 #title="ngModel"
             >
             <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
         </mat-form-field>
 
         <mat-form-field>
-            <textarea matInput rows="6" name="content" ngModel required #content="ngModel"></textarea> 
+            <textarea matInput rows="6" name="content" placeholder="Post Content" ngModel required #content="ngModel"></textarea> 
             <mat-error *ngIf="title.invalid">Please enter a post content</mat-error>
         </mat-form-field>
 
