--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,5 @@
   <!--
   <post-create (postCreated)="onPostAdded($event)"></post-create>
   <post-list [posts]="storedPosts"></post-list> -->
-
-  <post-create></post-create>
-  <post-list></post-list>
+    <router-outlet></router-outlet>
 </main>
