--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,9 @@
-<mat-toolbar color="primary">Mumuz Bakery</mat-toolbar>
+<mat-toolbar color="primary">
+    <span><a routerLink= "">Mumuz Bakery</a></span>
+    <span class="space"></span>
+    <ul>
+        <li>
+            <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
+        </li>
+    </ul>
+</mat-toolbar>
